try new things not working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
 <form action="/submit" method="POST">
     <label for="blog"> Start your blog: </label>
     <br>
-    <textarea name="blog" id="blog" rows="25" cols="50" placeholder="Write here"></textarea>
+    <textarea name="blog" id="blog"  placeholder="Write here"
+    class="form-control mb-3" rows="5"></textarea>
     <br>
-    <button type="submit">Publish</button>
+    <button type="submit" class="btn btn-primary">Publish</button>
 </form>
 
 
