--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,14 @@
-</main>
+<!-- </main>
 <footer>
     <p>© <%= new Date().getFullYear() %> PostIt</p>
 </footer>
 
+</body>
+</html> -->
+
+<!-- views/partials/footer.ejs -->
+</div> <!-- container -->
+ <p>© <%= new Date().getFullYear() %> PostIt</p>
+<script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
